ConditionedGaussianProcess to support GaussianProcessRegression result

--- a/python/src/ConditionedGaussianProcess_doc.i.in
+++ b/python/src/ConditionedGaussianProcess_doc.i.in
@@ -10,6 +10,8 @@
 
 Parameters
 ----------
+krigingResult : :class:`~openturns.KrigingResult`
+    Structure that contains all elements of kriging computations.
 gprResult : :class:`~openturns.experimental.GaussianProcessRegressionResult`
     Structure that contains all elements of Gaussian Process Regression computations.
 mesh : :class:`~openturns.Mesh`
