--- a/lib/src/Uncertainty/Model/CMakeLists.txt
+++ b/lib/src/Uncertainty/Model/CMakeLists.txt
@@ -31,6 +31,7 @@ ot_add_source_file (Process.cxx)
 ot_add_source_file (DistributionParametersImplementation.cxx)
 ot_add_source_file (DistributionParameters.cxx)
 ot_add_source_file (RatioOfUniforms.cxx)
+ot_add_source_file(GaussianProcessRandomVector.cxx)
 
 ot_install_header_file (RandomVectorImplementation.hxx)
 ot_install_header_file (SklarCopula.hxx)
@@ -61,3 +62,4 @@ ot_install_header_file (Process.hxx)
 ot_install_header_file (DistributionParametersImplementation.hxx)
 ot_install_header_file (DistributionParameters.hxx)
 ot_install_header_file (RatioOfUniforms.hxx)
+ot_install_header_file (GaussianProcessRandomVector.hxx)
