--- a/lib/src/Uncertainty/Algorithm/MetaModel/Kriging/CMakeLists.txt
+++ b/lib/src/Uncertainty/Algorithm/MetaModel/Kriging/CMakeLists.txt
@@ -6,6 +6,8 @@ ot_add_current_dir_to_include_dirs ()
 
 ot_add_source_file (KrigingEvaluation.cxx)
 ot_add_source_file (KrigingGradient.cxx)
+ot_add_source_file (GaussianProcessEvaluation.cxx)
+ot_add_source_file (GaussianProcessGradient.cxx)
 ot_add_source_file (KrigingAlgorithm.cxx)
 ot_add_source_file (KrigingResult.cxx)
 ot_add_source_file (GeneralLinearModelResult.cxx)
@@ -18,6 +20,9 @@ ot_add_source_file (GaussianProcessConditionalCovariance.cxx)
 
 ot_install_header_file (KrigingEvaluation.hxx)
 ot_install_header_file (KrigingGradient.hxx)
+ot_install_header_file (GaussianProcessEvaluation.hxx)
+ot_install_header_file (GaussianProcessGradient.hxx)
+
 ot_install_header_file (KrigingAlgorithm.hxx)
 ot_install_header_file (KrigingResult.hxx)
 ot_install_header_file (GeneralLinearModelResult.hxx)
