testing: Add assert_raises

--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -903,6 +903,7 @@ ot_pyinstallcheck_test (None IGNOREOUT)
 ot_pyinstallcheck_test (docstring_missing IGNOREOUT)
 ot_pyinstallcheck_test (sphinx_missing IGNOREOUT)
 ot_pyinstallcheck_test (ResourceMap_missing IGNOREOUT)
+ot_pyinstallcheck_test (testcode IGNOREOUT)
 
 
 
