--- a/python/src/CovarianceModelImplementation_doc.i.in
+++ b/python/src/CovarianceModelImplementation_doc.i.in
@@ -523,7 +523,7 @@ OT_CovarianceModel_operator_doc
 %define OT_CovarianceModel_setActiveParameter_doc
 "Accessor to the active parameter set.
 
-In the context of kriging, it allows one to choose which hyperparameters are tuned.
+This method defines which hyperparameters are tuned.
 
 Parameters
 ----------
