--- a/python/src/GaussianProcessFitter_doc.i.in
+++ b/python/src/GaussianProcessFitter_doc.i.in
@@ -54,36 +54,35 @@ where :math:`\vect{p}` is the vector of the parameters of the covariance model  
 :class:`openturns.CovarianceModel` to get details on the activation of the estimation of the other
 parameters.
 
-
 The estimation is done by maximizing the *reduced* log-likelihood of the mode, defined in :eq:`logLikelihoodGP`.
 
 The default optimizer is :class:`~openturns.Cobyla` and can be changed thanks to the
 :meth:`setOptimizationAlgorithm` method.
-User could also change the default optimization solver by setting the
-`GaussianProcessFitter-DefaultOptimizationAlgorithm` resource map key to one of the :class:`~openturns.NLopt`
+User could also change the default optimization solver by setting the entry 
+`GaussianProcessFitter-DefaultOptimizationAlgorithm` of :class:`~openturns.ResourceMap` to one of the :class:`~openturns.NLopt`
 solver names.
 
 It is also possible to proceed as follows:
 
-- ask for the reduced log-likelihood function thanks to the :meth:`getObjectiveFunction` method,
-- optimize it with respect to the parameters :math:`\vect{\theta}` and  :math:`\vect{\sigma}` using any optimization algorithms (that can take into account some additional constraints if needed),
-- set the optimal parameter value into the covariance model used in the *GaussianProcessFitter*,
-- tell the algorithm not to optimize the parameter using the :meth:`setOptimizeParameters` method.
+* ask for the reduced log-likelihood function thanks to the :meth:`getObjectiveFunction` method,
+* optimize it with respect to the parameters :math:`\vect{\theta}` and  :math:`\vect{\sigma}` using any optimization algorithms
+  (that can take into account some additional constraints if needed),
+* set the optimal parameter value into the covariance model used in the *GaussianProcessFitter*,
+* tell the algorithm not to optimize the parameter using the :meth:`setOptimizeParameters` method.
 
 The behaviour of the reduction is controlled by the following keys in :class:`~openturns.ResourceMap`:
 
-- *ResourceMap.SetAsBool('GaussianProcessFitter-UseAnalyticalAmplitudeEstimate', True)* to use the reduction associated to
+* *ResourceMap.SetAsBool('GaussianProcessFitter-UseAnalyticalAmplitudeEstimate', True)* to use the reduction associated to
   :math:`\sigma`. It has no effect if :math:`d>1` or if :math:`d=1` and :math:`\sigma` is not part of :math:`\vect{p}`,
-- *ResourceMap.SetAsBool('GaussianProcessFitter-UnbiasedVariance', True)* allows one to use the *unbiased* estimate of
+* *ResourceMap.SetAsBool('GaussianProcessFitter-UnbiasedVariance', True)* allows one to use the *unbiased* estimate of
   :math:`\sigma` where :math:`\dfrac{1}{\sampleSize}` is replaced by :math:`\dfrac{1}{\sampleSize-\outputDim}` in the optimality condition for :math:`\sigma`.
-
 
 With huge samples, the `hierarchical matrix <http://en.wikipedia.org/wiki/Hierarchical_matrix>`_
 implementation could be used if `hmat-oss` support has been enabled.
 
 This implementation, which is based on a compressed representation of an approximated covariance matrix
 (and its Cholesky factor), has a better complexity both in terms of memory requirements
-and floating point operations. To use it, the `GaussianProcessFitter-LinearAlgebra` resource map key should be
+and floating point operations. To use it, the entry `GaussianProcessFitter-LinearAlgebra` of the :class:`openturns.ResourceMap` class should be
 instancied to `HMAT`. Default value of the key is `LAPACK`.
 
 Examples
