Sphinx: Use SVG for class plots

--- a/python/doc/conf.py.in
+++ b/python/doc/conf.py.in
@@ -78,7 +78,7 @@ if subprocess.run(["dvisvgm", "-V"], shell=True, capture_output=True).returncode
 imgmath_embed = True
 
 extensions.append('matplotlib.sphinxext.plot_directive')
-plot_formats = ['png']
+plot_formats = ['svg']
 
 extensions.append('sphinx_copybutton')
 copybutton_exclude = '.linenos, .gp'
